@startuml Deal Service - Hexagonal Architecture

!define DOMAIN_COLOR #E8F5E9
!define APPLICATION_COLOR #E3F2FD
!define INFRASTRUCTURE_COLOR #FFF9C4

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam rectangle {
    BackgroundColor<<domain>> DOMAIN_COLOR
    BorderColor<<domain>> #4CAF50
    BackgroundColor<<application>> APPLICATION_COLOR
    BorderColor<<application>> #2196F3
    BackgroundColor<<infrastructure>> INFRASTRUCTURE_COLOR
    BorderColor<<infrastructure>> #FFC107
}

title Гексагональная архитектура: Deal Service (Мини-CRM «Фриланс без паники»)

' Infrastructure Layer
package "Infrastructure Layer" <<infrastructure>> {
    ' Входящие адаптеры
    rectangle "REST API" as REST {
        component "DealController" as Controller
    }
    
    ' Исходящие адаптеры
    rectangle "Persistence" as Persistence {
        component "InMemoryDealRepository" as InMemRepo
    }
    
    rectangle "External Services" as External {
        component "MockInvoiceService" as MockInvoice
        component "ConsoleNotificationService" as ConsoleNotif
    }
    
    rectangle "Configuration" as Config {
        component "DIContainer" as DI
    }
}

' Application Layer
package "Application Layer" <<application>> {
    rectangle "Inbound Ports" as InPorts {
        interface "CreateDealUseCase" as CreateUC
        interface "GetDealUseCase" as GetUC
    }
    
    rectangle "Outbound Ports" as OutPorts {
        interface "DealRepository" as RepoPort
        interface "InvoiceService" as InvoicePort
        interface "NotificationService" as NotifPort
    }
    
    rectangle "Service" as Service {
        component "DealService" as DealService
    }
}

' Domain Layer
package "Domain Layer" <<domain>> {
    rectangle "Aggregates" as Aggregates {
        component "Deal" as Deal
    }
    
    rectangle "Value Objects" as VOs {
        component "Money" as Money
        component "DealStatus" as DealStatus
    }
    
    rectangle "Exceptions" as Exceptions {
        component "DomainException" as DomainEx
    }
}

' Связи Infrastructure → Application
Controller --> CreateUC : <<uses>>
Controller --> GetUC : <<uses>>
InMemRepo ..|> RepoPort : <<implements>>
MockInvoice ..|> InvoicePort : <<implements>>
ConsoleNotif ..|> NotifPort : <<implements>>
DI --> Controller : <<creates>>
DI --> InMemRepo : <<creates>>
DI --> MockInvoice : <<creates>>
DI --> ConsoleNotif : <<creates>>
DI --> DealService : <<creates>>

' Связи Application
DealService ..|> CreateUC : <<implements>>
DealService ..|> GetUC : <<implements>>
DealService --> RepoPort : <<depends on>>
DealService --> InvoicePort : <<depends on>>
DealService --> NotifPort : <<depends on>>

' Связи Application → Domain
DealService --> Deal : <<uses>>
DealService --> Money : <<uses>>
DealService --> DealStatus : <<uses>>

' Связи Domain
Deal *-- Money : has
Deal --> DealStatus : has
Deal --> DomainEx : <<throws>>

note right of Deal
  <b>Агрегат: Deal</b>
  ----
  • id: String (D-YYYY-NNNN)
  • clientId: String
  • title: String
  • amount: Money
  • status: DealStatus
  • createdAt: datetime
  ----
  <b>Business Rules:</b>
  • Сумма > 0
  • Нельзя изменить после INVOICED
  • Статус: NEGOTIATION → INVOICED → PAID
end note

note right of Money
  <b>Value Object: Money</b>
  ----
  • amount: Decimal
  • currency: String
  ----
  <b>Rules:</b>
  • amount >= 0
  • currency = USD/BYN/EUR
end note

note left of CreateUC
  <b>Входящий порт</b>
  ----
  create_deal(command: CreateDealCommand) -> str
  get_deal(deal_id: str) -> Deal
end note

note left of RepoPort
  <b>Исходящий порт</b>
  ----
  save(deal: Deal) -> None
  find_by_id(deal_id: str) -> Optional[Deal]
  update_status(deal_id: str, status: DealStatus) -> None
end note

note left of InvoicePort
  <b>Исходящий порт</b>
  ----
  create_invoice(deal_id: str, amount: Money) -> str
end note

note bottom of Controller
  <b>HTTP Adapter</b>
  ----
  POST /api/deals
  {
    "clientId": "cli-001",
    "title": "Разработка лендинга",
    "amount": 1500.00,
    "currency": "USD"
  }
  
  GET /api/deals/{id}
end note

legend right
  |<DOMAIN_COLOR>| <b>Domain Layer</b> |
  | Чистая бизнес-логика |
  | Не зависит от фреймворков |
  |<APPLICATION_COLOR>| <b>Application Layer</b> |
  | Порты (интерфейсы) |
  | Сервисы (use-case) |
  |<INFRASTRUCTURE_COLOR>| <b>Infrastructure Layer</b> |
  | Адаптеры (реализации) |
  | REST, БД, внешние сервисы, DI |
endlegend

@enduml
